# scalable-demo-2024-t3

./: README.md
lessons/03/: expose-traefik-dashboard.yaml
lessons/03/foodtrucks-k8s/: CMDS  backend-deploy.yaml  backend-svc.yaml  elastic-deploy.yaml  elastic-svc.yaml  frontend-deploy.yaml  frontend-svc.yaml  ingress.yaml
lessons/03/locust/: CMDS  pyproject.toml  try_median.py  try_mu_static.py  try_os_static.py
lessons/03/servers/flask/: CMDS  app.py  pyproject.toml
lessons/05/: CMDS  docker-compose.yml
lessons/05/app/: Dockerfile  main.py  pyproject.toml  requirements.txt  tracing.py
lessons/05/app/worker_make_lucky_numbers/: app.py  celeryconfig.py
