[tool.poetry]
name = "03"
version = "0.1.0"
description = ""
authors = ["Kanat Tangwongsan <kanat.tan@mahidol.edu>"]

[tool.poetry.dependencies]
python = "^3.11"
locust = "^2.16.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
