[tool.poetry]
name = "flask-server"
version = "0.1.0"
description = ""
authors = ["Kanat Tangwongsan <kanat.tan@mahidol.edu>"]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.3.3"
gunicorn = "^21.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
